Changelog for collective.editskinswitcher
=========================================

  (name of developer listed in brackets)

collective.editskinswitcher - 0.3 (Unreleased)
----------------------------------------------

- Avoid confusion in README.txt: talk about Editor Skin and Visitor
  Skin instead of Plone Default and the default skin.
  [maurits]

- Update README.txt to tell about the new options introduced in
  version 0.2.
  [maurits]

collective.editskinswitcher - 0.2 (Released 28 January 2008)
------------------------------------------------------------

- When testing if the user is logged in, check for the __ac cookie in
  the request instead of portal_membership.isAnonymousUser as this
  does not work in real life; probably because we use an AccessRule.
  [maurits]

- Add based_on_url property (default: True).  When True, the skin
  switching is done when you visit the site via an edit url.  When
  combined with need_authentication=True, only logged-in users on the
  edit url get the edit skin.
  [maurits]

- Add need_authentication property (default: False).  When True, the
  skin switching is only done when you are authenticated (logged in).
  [maurits]

- In the base test cases, create the new default skin.
  [maurits]

- Split tests/setup.txt in two files for separating some unrelated
  tests.
  [maurits]

- Add a more readable README.txt and move the old one into the
  tests directory as it contains most of our tests.
  [maurits]


collective.editskinswitcher - 0.1 (Released 25 January 2008)
------------------------------------------------------------

- Add a property sheet editskin_switcher with property edit_skin.
  Default value: Plone Default.  Use that for determining which
  skin to give to editors.
  [maurits]

- Initial package structure.
  [zopeskel]