@@ -1,0 +1,9 @@
+What ideas do we have for further work?
+=======================================
+
+Put ideas here and put your own name between brackets so other people
+know who had this great idea.
+
+
+- Write tests for the pre traversal adapter.  Perhaps browser tests?
+  [maurits]
