@@ -1,11 +1,0 @@
-<?xml version="1.0"?>
-<import-steps>
-  <import-step id="collective.editskinswitcher.various"
-               version="20080122-01"
-               handler="collective.editskinswitcher.setuphandlers.setupVarious"
-               title="Edit Skin Switcher: miscellaneous import steps">
-    Various import steps that are not handled by GS import/export
-    handlers.
-  </import-step>
-</import-steps>
-
