@@ -17,8 +17,15 @@ You can specify a different edit skin in the portal properties::
     >>> edit_skin
     'Plone Default'
     >>> editskin_props.edit_skin = 'Holy Grail'
+
+We test this by faking traversal::
+
     >>> from collective.editskinswitcher.tests.utils import TestRequest
-    >>> context.switchskin(context, TestRequest(SERVER_URL='http://edit.domain.org'))
+    >>> from collective.editskinswitcher.tests.utils import FakeTraversalEvent
+    >>> from collective.editskinswitcher.traversal import switch_skin
+    >>> request = TestRequest(SERVER_URL='http://edit.domain.org')
+    >>> event = FakeTraversalEvent(context, request)
+    >>> switch_skin(context, event)
     >>> context.getCurrentSkinName()
     'Holy Grail'
 
@@ -49,7 +56,9 @@ When we totally remove our property sheet, no errors are thrown, just
 no switching is done anymore.
 
     >>> del portal_props.editskin_switcher
-    >>> context.switchskin(context, TestRequest(SERVER_URL='http://edit.domain.org'))
+    >>> request = TestRequest(SERVER_URL='http://edit.domain.org')
+    >>> event = FakeTraversalEvent(context, request)
+    >>> switch_skin(context, event)
     >>> context.getCurrentSkinName()
     'Holy Grail'
 
